--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "mkdir -p dist && cp manifest.json dist && tsc --watch --pretty --project ."
+    "start": "mkdir -p dist && cp manifest.json dist && concurrently -c 'bgGreen,bgRed' npm:tsc-watch npm:lint",
+    "tsc-watch": "tsc --watch --pretty --project .",
+    "lint": "onchange -i '**/*.ts' -e 'dist/**/*.*' -- yarn lint-once",
+    "lint-once": "yarn lint-prettier && yarn lint-eslint",
+    "lint-prettier": "prettier --list-different --write './**/*.(ts|json|md)'",
+    "lint-eslint": "eslint --fix ."
   },
   "repository": {
     "type": "git",
@@ -17,8 +22,20 @@
     "url": "https://github.com/lukaselmer/kapo-screen-chrome/issues"
   },
   "homepage": "https://github.com/lukaselmer/kapo-screen-chrome#readme",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "@types/chrome": "^0.0.117",
+    "@typescript-eslint/eslint-plugin": "^3.5.0",
+    "@typescript-eslint/parser": "^3.5.0",
+    "concurrently": "^5.2.0",
+    "eslint": "^7.4.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "^4.2.1",
+    "onchange": "^7.0.2",
+    "prettier": "^2.0.5",
     "typescript": "^3.9.6"
   }
 }
