--- a/.github/workflows/tsc-and-linting.yml
+++ b/.github/workflows/tsc-and-linting.yml
@@ -8,18 +8,14 @@ on: push
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.x]
-
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
-      - run: yarn install
-      - run: yarn ci
-    # - run: npm run build --if-present
-    # - run: npm test
+          node-version: '14'
+      - uses: borales/actions-yarn@v2.0.0
+        with:
+          cmd: install
+      - uses: borales/actions-yarn@v2.0.0
+        with:
+          cmd: ci
