--- a/.github/workflows/tsc-and-linting.yml
+++ b/.github/workflows/tsc-and-linting.yml
@@ -13,9 +13,5 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '14'
-      - uses: borales/actions-yarn@v2.0.0
-        with:
-          cmd: install
-      - uses: borales/actions-yarn@v2.0.0
-        with:
-          cmd: ci
+      - run: yarn install
+      - run: yarn ci
