--- a/.github/workflows/tsc-and-linting.yml
+++ b/.github/workflows/tsc-and-linting.yml
@@ -13,7 +13,5 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '14'
-      - uses: bahmutov/npm-install@v1
-        with:
-          working-directory: '.'
+      - run: yarn install
       - run: yarn ci
