--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "mkdir -p dist && cp manifest.json dist && concurrently -c 'bgGreen,bgRed' npm:tsc-watch npm:lint-watch",
+    "start": "mkdir -p dist && cp src/manifest.json dist && cp src/app.css dist && concurrently -c 'bgGreen,bgRed' npm:tsc-watch npm:lint-watch",
     "tsc-watch": "tsc --watch --pretty --project .",
     "lint-watch": "onchange -i '**/*.ts' -e 'dist/**/*.*' -- yarn lint",
     "lint": "yarn lint-prettier && yarn lint-eslint",
