--- a/testserver/package.json
+++ b/testserver/package.json
@@ -9,6 +9,7 @@
     "http-server": "^0.12.3"
   },
   "scripts": {
+    "start": "yarn http",
     "http": "http-server data",
     "https": "http-server data --ssl"
   }
