Switch build pipeline to webpack

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,7 +8,7 @@
   "content_scripts": [
     {
       "js": ["contentscript.js"],
-      "css": ["app.css"],
+      "css": ["style.css"],
       "matches": ["<all_urls>"]
     }
   ],
