--- a/package.json
+++ b/package.json
@@ -5,19 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "ci": "tsc --pretty --project . && prettier --list-different './**/*.(scss|ts|json|md|yml)' && eslint . && yarn sass && yarn manifest",
-    "start": "yarn clean && concurrently -c 'bgCyan,bgRed,bgYellow,bgGreen,bgWhite' npm:tsc-watch npm:sass-watch npm:manifest-watch npm:lint-watch npm:testserver",
-    "tsc-watch": "tsc --watch --pretty --project .",
-    "sass-watch": "onchange -i 'src/app.scss' -- yarn sass",
-    "sass": "mkdir -p dist && sass src/app.scss dist/app.css",
-    "manifest-watch": "onchange -i 'src/manifest.json' 'src/app.css' -- yarn manifest",
-    "manifest": "mkdir -p dist && cp src/manifest.json dist && cp node_modules/crx-hotreload/hot-reload.js dist",
+    "ci": "tsc --pretty --project . && prettier --list-different './**/*.(scss|ts|json|md|yml)' && eslint . && yarn build",
+    "start": "yarn clean && concurrently -c 'bgCyan,bgRed,bgYellow,bgGreen,bgWhite' npm:webpack-watch npm:lint-watch npm:testserver",
     "lint-watch": "onchange -i '**/*.ts' -e 'dist/**/*.*' -- yarn lint",
     "lint": "yarn lint-prettier && yarn lint-eslint",
     "lint-prettier": "prettier --list-different --write './**/*.(scss|ts|json|md|yml)'",
     "lint-eslint": "eslint --fix .",
     "clean": "rm -rf dist && mkdir dist",
-    "testserver": "cd testserver && yarn start"
+    "testserver": "cd testserver && yarn start",
+    "webpack-watch": "webpack --mode development --watch",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -35,19 +32,27 @@
     "@types/webpack-dev-server": "^3.11.0",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
+    "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^5.2.0",
+    "copy-webpack-plugin": "^6.0.3",
     "crx-hotreload": "^1.0.4",
+    "css-loader": "^3.6.0",
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
+    "mini-css-extract-plugin": "^0.9.0",
     "onchange": "^7.0.2",
     "prettier": "^2.0.5",
     "sass": "^1.26.10",
+    "sass-loader": "^9.0.2",
+    "style-loader": "^1.2.1",
+    "ts-loader": "^8.0.0",
     "typescript": "^3.9.6",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-fix-style-only-entries": "^0.5.1"
   }
 }
