--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Kapo-Screen Chrome Extension",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "ci": "tsc --pretty --project . && prettier --list-different './**/*.(scss|ts|json|md|yml)' && eslint . && yarn build",
+    "ci": "yarn jest && tsc --skipLibCheck --pretty --project . && prettier --list-different './**/*.(scss|ts|json|md|yml)' && eslint . && yarn build",
     "start": "yarn clean && concurrently -c 'bgCyan,bgRed,bgYellow,bgGreen,bgWhite' npm:webpack-watch npm:lint-watch npm:testserver",
     "lint-watch": "onchange -i '**/*.ts' -e 'dist/**/*.*' -- yarn lint",
     "lint": "yarn lint-prettier && yarn lint-eslint",
@@ -14,7 +13,9 @@
     "clean": "rm -rf dist && mkdir dist",
     "testserver": "cd testserver && yarn start",
     "webpack-watch": "webpack --mode development --watch",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "coverage": "jest --coverage",
+    "test": "yarn jest --watch"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
   "dependencies": {},
   "devDependencies": {
     "@types/chrome": "^0.0.117",
+    "@types/jest": "^26.0.4",
     "@types/webpack-dev-server": "^3.11.0",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
@@ -43,12 +45,14 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
+    "jest": "^26.1.0",
     "mini-css-extract-plugin": "^0.9.0",
     "onchange": "^7.0.2",
     "prettier": "^2.0.5",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
+    "ts-jest": "^26.1.1",
     "ts-loader": "^8.0.0",
     "typescript": "^3.9.6",
     "webpack": "^4.43.0",
