--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "description": "Kapo-Screen Chrome Extension",
   "main": "index.js",
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn ci"
+    }
+  },
   "scripts": {
     "ci": "yarn jest && tsc --skipLibCheck --pretty --project . && prettier --list-different './**/*.(scss|ts|json|md|yml)' && eslint . && yarn build",
     "start": "yarn clean && concurrently -c 'bgCyan,bgRed,bgYellow,bgGreen,bgWhite' npm:webpack-watch npm:lint-watch npm:testserver",
@@ -45,6 +50,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
+    "husky": "^4.2.5",
     "jest": "^26.1.0",
     "mini-css-extract-plugin": "^0.9.0",
     "onchange": "^7.0.2",
