Add windows files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,14 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
