--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "testserver": "cd testserver && yarn start",
     "webpack-watch": "webpack --mode development --watch",
     "build": "webpack --mode production",
+    "build-dev": "webpack --mode development",
     "coverage": "jest --coverage",
     "test": "yarn jest --watch"
   },
@@ -63,6 +64,7 @@
     "typescript": "^3.9.6",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
-    "webpack-fix-style-only-entries": "^0.5.1"
+    "webpack-fix-style-only-entries": "^0.5.1",
+    "zip-webpack-plugin": "^3.0.0"
   }
 }
