--- a/src/manifest.prod.json
+++ b/src/manifest.prod.json
@@ -4,7 +4,7 @@
   "description": "Modifies the website so that the text becomes readable on large screens",
   "version": "0.0.1",
   "author": "Lukas Elmer <lukas.elmer@gmail.com>",
-  "permissions": ["management", "tabs", "activeTab"],
+  "permissions": ["tabs", "activeTab"],
   "content_scripts": [
     {
       "js": ["contentscript.js"],
@@ -13,7 +13,7 @@
     }
   ],
   "background": {
-    "scripts": ["hot-reload.js", "background.js"],
+    "scripts": ["background.js"],
     "persistent": false
   },
   "content_security_policy": "script-src 'self'; object-src 'self'",
